Fix minor issues according to Copilot review